--- a/SG_Property_Assistant/project.config.json
+++ b/SG_Property_Assistant/project.config.json
@@ -3,6 +3,7 @@
 	"setting": {
 		"urlCheck": true,
 		"es6": true,
+		"enhance": true,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
@@ -13,8 +14,7 @@
 			"ignore": [],
 			"disablePlugins": [],
 			"outputPath": ""
-		},
-		"enhance": true
+		}
 	},
 	"client": "client/",
 	"svr": "server/",
