--- a/SG_Property_Assistant/app.json
+++ b/SG_Property_Assistant/app.json
@@ -26,7 +26,9 @@
     "pages/TabRecommend/helpMeFindRoom/helpMeFindRoom",
     "pages/TabRecommend/projectProfilePage/projectProfilePage",
     "pages/TabRecommend/layoutHouseList/layoutHouseListPage",
-    "pages/TabRecommend/propertiesNewsList/propertiesNewsList"
+    "pages/TabRecommend/propertiesNewsList/propertiesNewsList",
+    "pages/TabRecommend/webViewPage/webViewPage",
+    "pages/TabRecommend/budgetToolPage/budgetToolPage"
   ],
   "window": {
     "backgroundTextStyle": "light",
