--- a/SG_Property_Assistant/project.config.json
+++ b/SG_Property_Assistant/project.config.json
@@ -36,13 +36,24 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "pages/TabMy/focusPublicNumberPage/focusPublicNumberPage",
+					"pathName": "pages/TabMy/focusPublicNumberPage/focusPublicNumberPage",
+					"scene": 1011
+				}
+			]
 		}
 	}
 }
